--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,6 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@source "../**/*.blade.php";
+@source "../**/*.js";
+@source "../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php";
+@source "../../storage/framework/views/*.php";
+@plugin "daisyui";
+
 @layer base {
     * {
         @apply antialiased;
